Fix dark mode td color

--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -1,7 +1,8 @@
 .dark-mode {
   background-color: darken($grisOscuro, 10);
 
-  p {
+  p,
+  td {
     color: $blanco;
   }
 
@@ -26,11 +27,13 @@
       filter: invert(100%);
     }
   }
+
   .texto-nosotros blockquote {
     color: $blanco;
   }
 
   .formulario {
+
     label,
     legend,
     p {
